--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-vector-icons": "^10.0.3"
   },
